--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,18 @@ steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
+- task: Npm@1
+  inputs:
+    command: 'install'
+- task: CmdLine@2
+  inputs:
+    script: 'node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
+- task: gulp@0
+  inputs:
+    gulpFile: 'gulpfile.js'
+    targets: 
+    gulpjs: 'node_modules/gulp/bin/gulp.js'
+    enableCodeCoverage: false
 - task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
@@ -29,6 +41,10 @@ steps:
   inputs:
     command: 'test'
     projects: '**/*[Tt]ests/*.csproj'
+- task: CopyFiles@2
+  inputs:
+    Contents: '**/azuredeploy.json'
+    TargetFolder: '$(build.artifactstagingdirectory)'
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
